--- a/career.html
+++ b/career.html
@@ -137,8 +137,8 @@
 <li> I've been recognized as one of the <b>Faces to Watch for Campaign Middle East’s Brand Edition.</b> </li>
 <li> I've mentored and supported dozens of <b>young adults and graduates</b> through their career journeys. </li>
 <li> <b>I am a facilitator for Google’s #IamRemarkable program</b>, where I lead workshops to help people recognize their true worth. </li>
-<li> <b>I am the co-founder of Project EQ</b>, an initiative aimed to upbring better world citizens </li>
-<li> <b>I am the Head of Communications</b> for Connecting Women in Technology MENA </li>
+<li> <b>I am the co-founder of Project EQ</b>, an initiative aimed to upbring better world citizens. </li>
+<li> <b>I am the Head of Communications</b> for Connecting Women in Technology MENA. </li>
 </ul>
 </font>
 </p>
@@ -248,7 +248,7 @@
 
                     <div class="service-text">
                         <h3 class="h4">Session 4: Mock Interview</h3>
-                        <p>This is the last session of the all-in-one career coaching program. In this session, we will work on your presentation and interview skills. It's important you show up confident and well-prepared for your interviews. In this session, we will work on just that.
+                        <p>This is the last session of the all-in-one career coaching program. In this session, we will work on your presentation and interview skills. It's important you show up confident and well-prepared for your interviews.
                         </p>
                     </div>
                 </div>
