--- a/career.html
+++ b/career.html
@@ -122,24 +122,28 @@
             </div>
 
             <div class="row row-x-center s-intro__about-wrap">
+
                 <div class="column s-intro__about">
-                    <h2 class="s-intro__about-title"> <font color="white">Hello! I’m Arohi Bangera.</font></h2>
+                  <center><img src="me.JPG" width=250px></center>
+                    <h1 class="s-intro__about-title"> <font color="white">Hello! I’m Arohi Bangera.</font></h1>
 
                     <p> <font color="white">
-                    Seven years ago, during my final years at university, I was struggling to land a decent job. I was looking for someone to mentor me, advise me and teach me the ropes. This is why I am launching my own career coaching program. <b>From one young adult to another, I am here for you</b>. </font>
+                      Seven years ago, during my final years at university, I was struggling to land a decent job. I needed someone to mentor me and teach me the ropes. <br> <br>
+
+  Navigating my way into the corporate world required much hard work and sacrifice. Without realizing, I was coaching and guiding others to subdue their fears, build confidence in themselves, and land their desired jobs. <br> <br>
+
+  To make the process easier and more structured, I am launching my own career coaching program! From one young adult to another, I am here for you. <br>
+ </font>
                     </p>
 
-                    <p> <font color="white">
+                    <p> <font color="white"> A few facts about me:
                       <ul>
-                      A few facts about me:
-<li> I’ve been working in the corporate world particularly in tech for <b>7+ years now. </b></li>
-<li> I recently graduated with a <b>Masters in Digital Media Design from Harvard University</b>, where I was also the <b>Director of Communications</b> for the Harvard Extension Student Association. </li>
-<li> I've been recognized as one of the <b>Faces to Watch for Campaign Middle East’s Brand Edition.</b> </li>
-<li> I've mentored and supported dozens of <b>young adults and graduates</b> through their career journeys. </li>
-<li> <b>I am a facilitator for Google’s #IamRemarkable program</b>, where I lead workshops to help people recognize their true worth. </li>
-<li> <b>I am the co-founder of Project EQ</b>, an initiative aimed to upbring better world citizens. </li>
-<li> <b>I am the Head of Communications</b> for Connecting Women in Technology MENA. </li>
-</ul>
+<li> Working in tech for 7+ years (first IBM, now TikTok)</li>
+<li> Masters in Digital Media Design, Harvard ’22  </li>
+<li> Facilitator for Google’s #IamRemarkable program, where I lead workshops to help people recognize their true worth</li>
+<li> Co-founder of Project EQ, an initiative aimed to nurture middle school students </li>
+<li> Head of Communications, Connecting Women in Technology MENA </li>
+<li> Recognized in <i>Faces to Watch</i>, Campaign Middle East </li>
 </font>
 </p>
 
@@ -201,7 +205,7 @@
                         An all-in-one <br>
                         career coaching program
                     </h1>
-                    <font color="white"><p> All sessions will be 1 hour long and will be held virtually. </p></font>
+                    <font color="white"><p> All sessions are 1 hour long and held virtually. </p></font>
 
                 </div>
             </div> <!-- end section-header -->
@@ -252,13 +256,42 @@
                         </p>
                     </div>
                 </div>
-                </div>
+              </div>
 
-            </div>
-          </div>
-        </div><!-- end services-list -->
+                <div class="row section-header has-bottom-sep">
+                    <div class="column lg-12">
+                        <h3 class="text-display-title">
+                            You should enroll if you are:
+                        </h3>
+
+                    </div>
+                </div> <!-- end section-header -->
+<div class="enrollitem">
+    <div class="enroll">
+      <ul>
+                <li> Trying to get an internship during your degree </li>
+                <li>About to graduate and want to quickly kickstart your career</li>
+                <li>A recent graduate and struggling to find purposeful work</li>
+                <li>Disillusioned with your job and want a change in profession </li>
+                <li>In need of a mentor or career counselor who will empower you to <br>unlock your talents and reach your potential faster</li></ul> </p></div> </div>
+
+
+
+
+        <!-- end services-list -->
+
+
 
         </section> <!-- end s-services -->
+
+
+
+
+
+
+
+
+
 
 
         <!-- ## works
@@ -377,7 +410,7 @@
                         500AED for one person, if you enroll one other friend into the program
                     </p>
                     <div class="btn-wrap">
-                        <a href="https://forms.gle/B6NS9U8zfXcDjcMWA" target=”_blank” class="btn btn--primary">
+                        <a href="https://forms.gle/bpo6Ge7XEMjrgM18A" target=”_blank” class="btn btn--primary">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill:rgba(0, 0, 0, 1);transform:;-ms-filter:"><path d="M20,4H4C2.897,4,2,4.897,2,6v12c0,1.103,0.897,2,2,2h16c1.103,0,2-0.897,2-2V6C22,4.897,21.103,4,20,4z M20,6v0.511 l-8,6.223L4,6.512V6H20z M4,18V9.044l7.386,5.745C11.566,14.93,11.783,15,12,15s0.434-0.07,0.614-0.211L20,9.044L20.002,18H4z"></path></svg>
                             Form
                         </a>
