--- a/career.html
+++ b/career.html
@@ -124,7 +124,7 @@
             <div class="row row-x-center s-intro__about-wrap">
 
                 <div class="column s-intro__about">
-                  <center><img src="images/me.JPG" width=250px></center>
+                  <center><img src="images/me.jpg" width=250px></center>
                     <h1 class="s-intro__about-title"> <font color="white">Hello! I’m Arohi Bangera.</font></h1>
 
                     <p> <font color="white">
