--- a/career.html
+++ b/career.html
@@ -258,24 +258,6 @@
                 </div>
               </div>
 
-                <div class="row section-header has-bottom-sep">
-                    <div class="column lg-12">
-                        <h3 class="text-display-title">
-                            You should enroll if you are:
-                        </h3>
-
-                    </div>
-                </div> <!-- end section-header -->
-<div class="enrollitem">
-    <div class="enroll">
-      <ul>
-                <li> Trying to get an internship during your degree </li>
-                <li>About to graduate and want to quickly kickstart your career</li>
-                <li>A recent graduate and struggling to find purposeful work</li>
-                <li>Disillusioned with your job and want a change in profession </li>
-                <li>In need of a mentor or career counselor who will empower you to <br>unlock your talents and reach your potential faster</li></ul> </p></div> </div>
-
-
 
 
         <!-- end services-list -->
@@ -283,6 +265,39 @@
 
 
         </section> <!-- end s-services -->
+
+
+        <section id="enroll" class="enrollif">
+
+            <div class="row section-header section-header--dark">
+                <div class="column lg-12">
+                    <h1 class="text-display-title">
+                        You should enroll if you are:
+                    </h1>
+                </div>
+            </div>
+
+            <div class="row row-x-center text-center s-contact__content">
+                <div class="column lg-12">
+
+                    <p class="lead">
+                      <ul> <li>Trying to get an internship during your degree</li>
+<li>About to graduate and want to quickly kickstart your career</li>
+<li>A recent graduate and struggling to find purposeful work </li>
+<li>Disillusioned with your job and want a change in profession</li>
+<li>In need of a mentor or career counselor who will empower you to unlock your talents and reach your potential faster</li></ul>
+
+                    </p>
+                    <!-- <div class="btn-wrap">
+                        <a href="https://forms.gle/bpo6Ge7XEMjrgM18A" target=”_blank” class="btn btn--primary">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill:rgba(0, 0, 0, 1);transform:;-ms-filter:"><path d="M20,4H4C2.897,4,2,4.897,2,6v12c0,1.103,0.897,2,2,2h16c1.103,0,2-0.897,2-2V6C22,4.897,21.103,4,20,4z M20,6v0.511 l-8,6.223L4,6.512V6H20z M4,18V9.044l7.386,5.745C11.566,14.93,11.783,15,12,15s0.434-0.07,0.614-0.211L20,9.044L20.002,18H4z"></path></svg>
+                            Form
+                        </a>
+                    </div> -->
+
+
+                </div>
+            </div>
 
 
 
@@ -302,7 +317,7 @@
 
           <center>  <font color="#24A89B"><h1> What others are saying: </h1> </font></center>
 
-            <div class="row testimonials">
+            <font color ="white"><div class="row testimonials">
                 <div class="column lg-12">
 
                     <div class="swiper-container testimonial-slider">
@@ -318,8 +333,8 @@
                                     </cite> -->
                                 </div>
                                 <p>
-                                <font color="white">  <strong>Racheal Woods</strong> </font></br>
-                                  <span>United States</span>
+                                <font color="black">  <strong>Racheal Woods</strong></br>
+                                  <span>United States</span></font>
                                   <br>
                                   <br>
                                 Definitely worth the money and time. She is straight to the point, thorough, and smart as a whip. She helped me out tremendously with organizing my thoughts and how I would need to approach an interview. I highly recommend working with her, especially if interested in communications/project management/product management.
@@ -335,8 +350,8 @@
                                     </cite> -->
                                 </div>
                                 <p>
-                                  <font color="white">  <strong>Simone Jaya</strong> </font></br>
-                                    <span>United Arab Emirates</span>
+                                  <font color="black">  <strong>Simone Jaya</strong> </br>
+                                    <span>United Arab Emirates</span></font>
                                     <br>
                                     <br>
                                 Arohi helped me overcome my fears of not landing my perfect job. She helped shape my career journey. She was very instrumental in ensuring that I remain confident through the job hunt process as well as the interview stage. She helped me rework my resume and gave me key pointers when it comes to what to look out for in a job. I would recommend Arohi to any young adult who is looking to either make a career change or step into the corporate world.
@@ -352,8 +367,8 @@
                                     </cite> -->
                                 </div>
                                 <p>
-                                  <font color="white">  <strong>Latiesha Whitsey</strong> </font></br>
-                                    <span>United States</span>
+                                  <font color="black">  <strong>Latiesha Whitsey</strong> </br>
+                                    <span>United States</span></font>
                                     <br>
                                     <br>
                                 This experience was great. I came in with the worse interview skills. She was able to break down how I should answer and what the recruiters are looking for. She also provided questions I should work on that can possibly be asked during a interview. I highly recommend!
@@ -369,8 +384,8 @@
                                     </cite> -->
                                 </div>
                                 <p>
-                                  <font color="white">  <strong>Stella Chiori</strong> </font></br>
-                                    <span>United States</span>
+                                  <font color="black">  <strong>Stella Chiori</strong> </br>
+                                    <span>United States</span></font>
                                     <br>
                                     <br>
                                 She was amazing! She taught me so much in such a short period of time and I am going into my interview tomorrow confident! You will not regret hiring her!
@@ -385,7 +400,7 @@
 
                 </div> <!-- end column -->
             </div> <!-- end row testimonials -->
-
+</font>
         </section> <!-- end s-works -->
 
 
