--- a/career.html
+++ b/career.html
@@ -452,9 +452,9 @@
                         <h4 class="h6">Follow me</h4>
 
                         <ul class="contact-list">
-                            <li><a href="https://www.linkedin.com/in/arohibangera/">LinkedIn</a></li>
-                            <li><a href="https://www.behance.net/arohibangera">Behance</a></li>
-                            <li><a href="https://www.instagram.com/arohib/">Instagram</a></li>
+                            <li><a href="https://www.linkedin.com/in/arohibangera/" target=”_blank”>LinkedIn</a></li>
+                            <li><a href="https://www.behance.net/arohibangera" target=”_blank”>Behance</a></li>
+                            <li><a href="https://www.instagram.com/arohib/" target=”_blank”>Instagram</a></li>
                         </ul>
                     </div>
 
