--- a/career.html
+++ b/career.html
@@ -280,12 +280,12 @@
             <div class="row row-x-center text-center s-contact__content">
                 <div class="column lg-12">
 
-                    <p class="lead">
+                    <p class="lead"> <font color="white">
                       <ul> <li>Trying to get an internship during your degree</li>
 <li>About to graduate and want to quickly kickstart your career</li>
 <li>A recent graduate and struggling to find purposeful work </li>
 <li>Disillusioned with your job and want a change in profession</li>
-<li>In need of a mentor or career counselor who will empower you to unlock your talents and reach your potential faster</li></ul>
+<li>In need of a mentor or career counselor who will empower you to unlock your talents and reach your potential faster</li></ul></font>
 
                     </p>
                     <!-- <div class="btn-wrap">
