--- a/career.html
+++ b/career.html
@@ -138,7 +138,7 @@
 
                     <p> <font color="white"> A few facts about me:
                       <ul>
-<li> Working in tech for 7+ years (first IBM, now TikTok)</li>
+<li> Working in tech for 7+ years (ex IBM and TikTok, now at Google)</li>
 <li> Masters in Digital Media Design, Harvard ’22  </li>
 <li> Facilitator for Google’s #IamRemarkable program, where I lead workshops to help people recognize their true worth</li>
 <li> Co-founder of Project EQ, an initiative aimed to nurture middle school students </li>
@@ -205,7 +205,7 @@
                         An all-in-one <br>
                         career coaching program
                     </h1>
-                    <font color="white"><p> All sessions are 1 hour long and held virtually. </p></font>
+                    <font color="white"><p> All sessions are 1 hour long, held virtually and 1:1 (custom to each person). </p></font>
 
                 </div>
             </div> <!-- end section-header -->
@@ -343,6 +343,23 @@
 
                             <div class="testimonial-slider__slide swiper-slide">
                                 <div class="testimonial-slider__author">
+                                    <!-- <img src="images/avatars/user-02.jpg" alt="Author image" class="testimonial-slider__avatar"> -->
+                                    <!-- <cite class="testimonial-slider__cite">
+                                        <strong>Racheal</strong>
+                                        <span>United States</span>
+                                    </cite> -->
+                                </div>
+                                <p>
+                                <font color="black">  <strong>Elena Webster</strong></br>
+                                  <span>United States</span></font>
+                                  <br>
+                                  <br>
+                                Working with Arohi on mock interview + coaching was incredible. I have a second interview to prepare for and needed some coaching, interview QA help, and a confidence boost as well. She is so kind and knowledgeable. Her background and experience at IBM, TikTok and Harvard definitely shines through. I am so glad I booked this session. I received everything I needed in terms of coaching and more. The session price is worth every dollar and every minute.
+                                </p>
+                            </div> <!-- end testimonial-slider__slide -->
+
+                            <div class="testimonial-slider__slide swiper-slide">
+                                <div class="testimonial-slider__author">
                                     <!-- <img src="images/avatars/user-03.jpg" alt="Author image" class="testimonial-slider__avatar">
                                     <cite class="testimonial-slider__cite">
                                         <strong>Simone</strong>
@@ -421,8 +438,7 @@
                 <div class="column lg-12">
 
                     <p class="lead">
-                      Pricing Structure: 750AED for one person OR
-                        500AED for one person, if you enroll one other friend into the program
+                      Pricing Structure: 500AED for all four sessions
                     </p>
                     <div class="btn-wrap">
                         <a href="https://forms.gle/bpo6Ge7XEMjrgM18A" target=”_blank” class="btn btn--primary">
